--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,3 @@
-
-
 Version 0.8
  - feature:     Extract parameters from EFA outputs (thanks to Dani Mori!)
  - feature:     Support BAYES outputs in compareModels
@@ -10,6 +8,7 @@ Version 0.8
  - bugfix:      Extract R-SQUARE information from multilevel analyses (where header order is reversed)
  - bugfix:      Restore accidental section match for PSR subsection that led to TECH8 failure
  - bugfix:      Extract invariance tests when only two models are compared
+ - bugfix:      Extract RESULTS IN PROBABILITY SCALE for models that only provide an Estimate column (ex5.5 GPCM)
 
 Version 0.7-3
  - feature:     Support use of plausible values for factors in BAYES output using SAVE=FSCORES(NIMP) approach
