--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Version 0.8
  - feature:     Support PSR PPPP section in tech8
  - feature:     Add NLatentClasses to $summaries if available. Fixes Github Issue #103
  - feature:     Extract results from "Results/Parameters for Class-specific Model Parts" sections (e.g., ex8.12)
+ - feature:     Refactor runModels to support a vector of folder and files to execute (target argument).
  - notice:      Removed getSavedata_Bparams in favor of readModels.
  - bugfix:      Extract standardized estimates from MONTE CARLO outputs
  - bugfix:      Extract R-SQUARE information from multilevel analyses (where header order is reversed)
@@ -18,7 +19,7 @@ Version 0.8
  - bugfix:      Extract specific indirect effects in Mplus v8.4+. Updated parser to handle new section headers. Fixes Github Issue #117
  - bugfix:      Parse categorical latent variable names correctly for multiple latent variable models
  - bugfix:      Parse univariate sample statistics for single-variable models
- 
+ - bugfix:      Handle relative paths appropriately in files provided to runModels. Fixed Github Issue #87
 
 Version 0.7-3
  - feature:     Support use of plausible values for factors in BAYES output using SAVE=FSCORES(NIMP) approach
