--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -54,7 +54,7 @@ these instructions, you can just use `library(MplusAutomation)` to load the pack
 The `MplusAutomation` package is compatible with `R` and `Mplus` on Windows, Mac OS X, and Linux platforms.
 
 The package was initially built using `R` 2.15.1 and has been tested with modern versions
-up through `R` 4.0.2. To obtain `R` follow [this link](http://cran.r-project.org/).
+up through `R` 4.0.2. To obtain `R` follow [this link](https://cran.r-project.org/).
 
 After installing `R` and launching a new session, type the following at the command line:
 
@@ -77,7 +77,7 @@ library(MplusAutomation)
 
 **Note:** Mac users using versions of `R` *prior to* 4.0.0 may experiences crashes if they have not setup
 Tcl/Tk properly within `R`. The default distribution of Tcl/Tk shipped with Mac OS X is not compatible with `R`. Instead, users should download and install the Tcl/Tk distribution 
-[here](http://cran.r-project.org/bin/macosx/tools).
+[here](https://cran.r-project.org/bin/macosx/tools).
 
 ## Determine the version of `MplusAutomation` on your machine
 
@@ -589,7 +589,7 @@ HTMLSummaryTable(
 ## Creating a summary table in LaTeX
 
 One major strength of `R` is its ability to be interwoven with LaTeX, an advanced typesetting language. The most
-frequently used approach for combining `R` and LaTex is Sweave (http://www.stat.uni-muenchen.de/~leisch/Sweave/),
+frequently used approach for combining `R` and LaTex is Sweave (https://cran.r-project.org/doc/Rnews/Rnews_2002-3.pdf),
 a built-in `R` function that runs `R` code embedded in a LaTeX document, thereby permitting the creation of
 advanced automated reports.
 
@@ -611,7 +611,7 @@ myLatexTable <- LatexSummaryTable(
 Note that `LatexSummaryTable()` supports two distinct parameters relative to other summary table functions:
 `caption()` and `label()`. These allow the user to set the caption and label properties of the table,
 which are used in LaTex for displaying a caption with the table and for allowing the table to be easily referenced
-in other parts of document, respectively. See http://en.wikibooks.org/wiki/LaTeX/Tables#The_table_environment_-_captioning_etc
+in other parts of document, respectively. See https://en.wikibooks.org/wiki/LaTeX/Tables#The_table_environment_-_captioning_etc
 for further details about LaTeX tables.
 
 The LaTeX syntax for a summary table could be included in an Sweave document in the following way:
