added detectMplus to NEWS and rebuilt site

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Version 1.0.0
  - feature:     Table sorting is more robust and there is a new argument, sortBy = NULL to avoid sorting. Thanks to cjvanlissa for the pull request.
  - feature:     Unit testing has been added to check that a variety of Mplus User Guide examples are read in correctly.
  - feature:     readModels() now returns the entire raw output file. This means that R objects from Mplus can be saved and contain all needed output. Mplus text input/output files do not need to be kept for a complete record. The raw output file is stored in the $output list element.
+ - feature:     MplusAutomation now tries harder to find an Mplus (or Mplus Demo as a fallback) command in an OS independent way thanks to new function detectMplus(). This takes over the default Mplus_command argument in runModels() and mplusModeler(), which should mean it works more often, on more platforms, without users needing to specify the command/path to Mplus.
  
 Version 0.8-1
  - feature:     prepareMplusData can create dummy codes for categorical variables using the dummyCode argument
