--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
-DEVEL
+Version 1.1.0
  - bugfix:      fixed a bug in handling multiply imputed data introduced in 1.0.0 
  - bugfix:      In readModels, $data_summary now contains cluster-level information for THREELEVEL models. Fixes Github Issue #18.
  - bugfix:      Handle 'Undefined' fields in MODEL RESULTS sections
  - bugfix:      Fix matrix-list confusion in reading specific indirect X sections in v8 output
  - feature:     Parse SUMMARY OF DATA section for crossclassified models. Fixed Github Issue #163
+ - bugfix:      Update examples to avoid use of URLs for CRAN compliance
 
 Version 1.0.0
  - notice:      Most functions are now quiet by default. Functions now print less messages/output to the console during regular runs. This can be changed using the new quiet argument available (e.g., in readModels(), mplusModeler(), etc.). Thanks to cjvanlissa for the pull request.
