--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.1.3 (DEVELOPMENT)
+ - notice:      Package namespace has been cleaned up to remove long-deprecated functions including extractModelSummaries, extractModelParameters, and extractModIndices.
+
 Version 1.1.2
  - bugfix:      Break file paths > 90 chars in prepareMplusData and mplusModeler to avoid line length errors
 
