--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Version 1.2 (DEVELOPMENT)
  - feature:     New submitModels function supports asynchronous submission of Mplus models on high-performance clusters using slurm or torque
+ - feature:     Rewrote parser for fixed-width Mplus output objects (esp. SAVEDATA files). Now 10x faster!
+ - feature:     Parser for SAVEDATA outputs now handles massive records where Mplus splits records across rows (esp. SAVE = FSCORES)
  - notice:      Package namespace has been cleaned up to remove long-deprecated functions including extractModelSummaries, extractModelParameters, and extractModIndices.
 
 Version 1.1.2
