--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Version 1.2 (DEVELOPMENT)
  - feature:     Rewrote parser for fixed-width Mplus output objects (esp. SAVEDATA files). Now 10x faster!
  - feature:     Use data.table fread for reading delimited files (e.g., BPARAMETERS). Approximately 10x faster!
  - feature:     Parser for SAVEDATA outputs now handles massive records where Mplus splits records across rows (esp. SAVE = FSCORES)
+ - feature:     readModels extracts odds ratios and their confidence intervals into $parameters$odds and $parameters$ci.odds, respectively. Addresses #192.
  - feature:     readModels extracts results of the R3STEP procedure in $r3step. Closes #204
  - feature:     readModels extracts new H5RESULTS object from Mplus v8.11 in $h5results
  - notice:      Package namespace has been cleaned up to remove long-deprecated functions including extractModelSummaries, extractModelParameters, and extractModIndices.
