--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Version 1.2 (DEVELOPMENT)
+ - feature:     New mplusModel object that simplifies inline integration of Mplus and R.
  - feature:     New submitModels function supports asynchronous submission of Mplus models on high-performance clusters using slurm or torque
  - feature:     Rewrote parser for fixed-width Mplus output objects (esp. SAVEDATA files). Now 10x faster!
  - feature:     Use data.table fread for reading delimited files (e.g., BPARAMETERS). Approximately 10x faster!
