--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Version 1.2 (DEVELOPMENT)
+ - feature:     New pathfilter argument to readModels allows for selection of outputs to read based both on path name (pathfilter) and file name (filefilter)
  - feature:     New mplusModel object that simplifies inline integration of Mplus and R.
  - feature:     New submitModels function supports asynchronous submission of Mplus models on high-performance clusters using slurm or torque
  - feature:     Rewrote parser for fixed-width Mplus output objects (esp. SAVEDATA files). Now 10x faster!
@@ -8,6 +9,7 @@ Version 1.2 (DEVELOPMENT)
  - feature:     readModels extracts results of the R3STEP procedure in $r3step. Closes #204
  - feature:     readModels extracts new H5RESULTS object from Mplus v8.11 in $h5results
  - notice:      Package namespace has been cleaned up to remove long-deprecated functions including extractModelSummaries, extractModelParameters, and extractModIndices.
+ - bugfix:      readModels now detects filefilter arguments that use $ or ^ to denote the end or beginning of a string, respectively, and also handles ".out" being included in filefilter Addresses #194.
 
 Version 1.1.2
  - bugfix:      Break file paths > 90 chars in prepareMplusData and mplusModeler to avoid line length errors
