--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,8 @@ Version 1.2 (DEVELOPMENT)
  - feature:     New mplusModel object that simplifies inline integration of Mplus and R.
  - feature:     New submitModels function supports asynchronous submission of Mplus models on high-performance clusters using slurm or torque
  - feature:     Rewrote parser for fixed-width Mplus output objects (esp. SAVEDATA files). Now 10x faster!
- - feature:     Use data.table fread for reading delimited files (e.g., BPARAMETERS). Approximately 10x faster!
+ - feature:     Use data.table fread for reading delimited files (e.g., BPARAMETERS). Now 10x faster!
+ - feature:     Rewrote friendlyGregexpr for speed, reducing time for readModels by approx. 25%.
  - feature:     Parser for SAVEDATA outputs now handles massive records where Mplus splits records across rows (esp. SAVE = FSCORES)
  - feature:     readModels extracts odds ratios and their confidence intervals into $parameters$odds and $parameters$ci.odds, respectively. Addresses #192.
  - feature:     readModels extracts results of the R3STEP procedure in $r3step. Closes #204
