--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Version 1.2 (DEVELOPMENT)
  - feature:     New pathfilter argument to readModels allows for selection of outputs to read based both on path name (pathfilter) and file name (filefilter)
+ - feature:     compareModels now returns a list of comparison results including chi-square difference tests when requested
  - feature:     New mplusModel object that simplifies inline integration of Mplus and R.
  - feature:     New submitModels function supports asynchronous submission of Mplus models on high-performance clusters using slurm or torque
  - feature:     Rewrote parser for fixed-width Mplus output objects (esp. SAVEDATA files). Now 10x faster!
